--- a/TestExcel/Views/Shared/_Navbar.cshtml
+++ b/TestExcel/Views/Shared/_Navbar.cshtml
@@ -57,7 +57,7 @@
             font-size: 16px;
         }
     #notiContent {
-        min-width: 400px;
+        min-width: 500px;
     }
     .badge {
         position:absolute;
@@ -109,10 +109,10 @@
                         + value.SUBJECT_ID_First + "_" + value.SUBJECT_ID_Last + '&BR_SEMESTER=' + value.SEMESTER + '&BR_YEAR='
                         + value.YEAR + '&color=#ff0000">'
                         + value.SUBJECT_ID_First + " " + datethai[parseInt(tmp_datefirst)] + " ตอน "
-                        + value.SECTION_NUMBER_First + " ห้อง " + value.SECTION_CLASSROOM_First + " " + value.SEMESTER + "/" + value.YEAR + "<br>"
+                        + value.SECTION_NUMBER_First + " ห้อง " + value.SECTION_CLASSROOM_First + " เวลา " + value.SECTION_TIME_START_First + ".00-" + value.SECTION_TIME_END_First + ".00 " + value.SEMESTER + "/" + value.YEAR + "<br>"
                         + value.SUBJECT_ID_Last + " "
                         + datethai[parseInt(tmp_datelast)]
-                        + " ตอน " + value.SECTION_NUMBER_Last + " ห้อง " + value.SECTION_CLASSROOM_Last + " " + value.SEMESTER + "/" + value.YEAR +  '</a></li>'));
+                        + " ตอน " + value.SECTION_NUMBER_Last + " ห้อง " + value.SECTION_CLASSROOM_Last + " เวลา " + value.SECTION_TIME_START_Last + ".00-" + value.SECTION_TIME_END_Last + ".00 " + value.SEMESTER + "/" + value.YEAR +  '</a></li>'));
                 });
             },
             error: function (error) {
